src/markdown.y.output
Terminals which are not used

   MINUS
   PLUS


Grammar

    0 $accept: markdownfile $end

    1 markdownfile: lines

    2 lines: lines line
    3      | /* empty */

    4 line: BLANKLINE
    5     | QUOTEBLANKLINE
    6     | H plaintext LINEBREAK
    7     | QUOTEH plaintext LINEBREAK
    8     | inlineelements LINEBREAK
    9     | LARGERTHAN inlineelements LINEBREAK
   10     | OLSTART inlineelements LINEBREAK
   11     | QUOTEOLSTART inlineelements LINEBREAK
   12     | INDENT OLSTART inlineelements LINEBREAK
   13     | ULSTART inlineelements LINEBREAK
   14     | INDENT ULSTART inlineelements LINEBREAK
   15     | QUOTEULSTART inlineelements LINEBREAK
   16     | INDENT inlineelements LINEBREAK
   17     | INDENT CODETEXT
   18     | error LINEBREAK

   19 inlineelements: inlineelements inlineelement
   20               | inlineelement

   21 inlineelement: TEXT
   22              | SPECIALCHAR
   23              | STAR inlineelements STAR
   24              | UNDERSCORE inlineelements UNDERSCORE
   25              | DOUBLESTAR inlineelements DOUBLESTAR
   26              | DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | BACKTICK codespan BACKTICK
   28              | DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

   31 plaintext: plaintext text_list
   32          | text_list

   33 text_list: TEXT
   34          | SPECIALCHAR

   35 codespan: codespan code_list
   36         | code_list

   37 code_list: CODETEXT
   38          | SPECIALCHAR


Terminals, with rules where they appear

$end (0) 0
error (256) 18
TEXT (258) 21 33
SPECIALCHAR (259) 22 34 38
CODETEXT (260) 17 37
INDENT (261) 12 14 16 17
H (262) 6
QUOTEH (263) 7
EXCLAMATION (264) 30
MINUS (265)
PLUS (266)
RIGHTPARENTHESES (267) 29 30
LEFTPARENTHESES (268) 29 30
RIGHTSQUARE (269) 29 30
LEFTSQUARE (270) 29 30
UNDERSCORE (271) 24
STAR (272) 23
BACKTICK (273) 27
BLANKLINE (274) 4
LINEBREAK (275) 6 7 8 9 10 11 12 13 14 15 16 18
LARGERTHAN (276) 9
DOUBLESTAR (277) 25
DOUBLEUNDERSCORE (278) 26
OLSTART (279) 10 12
ULSTART (280) 13 14
DOUBLEBACKTICK (281) 28
QUOTEBLANKLINE (282) 5
QUOTEOLSTART (283) 11
QUOTEULSTART (284) 15
STARX (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
markdownfile (32)
    on left: 1, on right: 0
lines (33)
    on left: 2 3, on right: 1 2
line (34)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18,
    on right: 2
inlineelements (35)
    on left: 19 20, on right: 8 9 10 11 12 13 14 15 16 19 23 24 25
    26
inlineelement (36)
    on left: 21 22 23 24 25 26 27 28 29 30, on right: 19 20
plaintext (37)
    on left: 31 32, on right: 6 7 29 30 31
text_list (38)
    on left: 33 34, on right: 31 32
codespan (39)
    on left: 35 36, on right: 27 28 35
code_list (40)
    on left: 37 38, on right: 35 36


state 0

    0 $accept: . markdownfile $end
    1 markdownfile: . lines
    2 lines: . lines line
    3      | .

    $default  reduce using rule 3 (lines)

    markdownfile  go to state 1
    lines         go to state 2


state 1

    0 $accept: markdownfile . $end

    $end  shift, and go to state 3


state 2

    1 markdownfile: lines .  [$end]
    2 lines: lines . line
    4 line: . BLANKLINE
    5     | . QUOTEBLANKLINE
    6     | . H plaintext LINEBREAK
    7     | . QUOTEH plaintext LINEBREAK
    8     | . inlineelements LINEBREAK
    9     | . LARGERTHAN inlineelements LINEBREAK
   10     | . OLSTART inlineelements LINEBREAK
   11     | . QUOTEOLSTART inlineelements LINEBREAK
   12     | . INDENT OLSTART inlineelements LINEBREAK
   13     | . ULSTART inlineelements LINEBREAK
   14     | . INDENT ULSTART inlineelements LINEBREAK
   15     | . QUOTEULSTART inlineelements LINEBREAK
   16     | . INDENT inlineelements LINEBREAK
   17     | . INDENT CODETEXT
   18     | . error LINEBREAK
   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    error             shift, and go to state 4
    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    INDENT            shift, and go to state 7
    H                 shift, and go to state 8
    QUOTEH            shift, and go to state 9
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    BLANKLINE         shift, and go to state 15
    LARGERTHAN        shift, and go to state 16
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    OLSTART           shift, and go to state 19
    ULSTART           shift, and go to state 20
    DOUBLEBACKTICK    shift, and go to state 21
    QUOTEBLANKLINE    shift, and go to state 22
    QUOTEOLSTART      shift, and go to state 23
    QUOTEULSTART      shift, and go to state 24

    $end  reduce using rule 1 (markdownfile)

    line            go to state 25
    inlineelements  go to state 26
    inlineelement   go to state 27


state 3

    0 $accept: markdownfile $end .

    $default  accept


state 4

   18 line: error . LINEBREAK

    LINEBREAK  shift, and go to state 28


state 5

   21 inlineelement: TEXT .

    $default  reduce using rule 21 (inlineelement)


state 6

   22 inlineelement: SPECIALCHAR .

    $default  reduce using rule 22 (inlineelement)


state 7

   12 line: INDENT . OLSTART inlineelements LINEBREAK
   14     | INDENT . ULSTART inlineelements LINEBREAK
   16     | INDENT . inlineelements LINEBREAK
   17     | INDENT . CODETEXT
   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    CODETEXT          shift, and go to state 29
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    OLSTART           shift, and go to state 30
    ULSTART           shift, and go to state 31
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 32
    inlineelement   go to state 27


state 8

    6 line: H . plaintext LINEBREAK
   31 plaintext: . plaintext text_list
   32          | . text_list
   33 text_list: . TEXT
   34          | . SPECIALCHAR

    TEXT         shift, and go to state 33
    SPECIALCHAR  shift, and go to state 34

    plaintext  go to state 35
    text_list  go to state 36


state 9

    7 line: QUOTEH . plaintext LINEBREAK
   31 plaintext: . plaintext text_list
   32          | . text_list
   33 text_list: . TEXT
   34          | . SPECIALCHAR

    TEXT         shift, and go to state 33
    SPECIALCHAR  shift, and go to state 34

    plaintext  go to state 37
    text_list  go to state 36


state 10

   30 inlineelement: EXCLAMATION . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    LEFTSQUARE  shift, and go to state 38


state 11

   29 inlineelement: LEFTSQUARE . plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   31 plaintext: . plaintext text_list
   32          | . text_list
   33 text_list: . TEXT
   34          | . SPECIALCHAR

    TEXT         shift, and go to state 33
    SPECIALCHAR  shift, and go to state 34

    plaintext  go to state 39
    text_list  go to state 36


state 12

   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   24              | UNDERSCORE . inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 40
    inlineelement   go to state 27


state 13

   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   23              | STAR . inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 41
    inlineelement   go to state 27


state 14

   27 inlineelement: BACKTICK . codespan BACKTICK
   35 codespan: . codespan code_list
   36         | . code_list
   37 code_list: . CODETEXT
   38          | . SPECIALCHAR

    SPECIALCHAR  shift, and go to state 42
    CODETEXT     shift, and go to state 43

    codespan   go to state 44
    code_list  go to state 45


state 15

    4 line: BLANKLINE .

    $default  reduce using rule 4 (line)


state 16

    9 line: LARGERTHAN . inlineelements LINEBREAK
   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 46
    inlineelement   go to state 27


state 17

   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   25              | DOUBLESTAR . inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 47
    inlineelement   go to state 27


state 18

   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   26              | DOUBLEUNDERSCORE . inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 48
    inlineelement   go to state 27


state 19

   10 line: OLSTART . inlineelements LINEBREAK
   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 49
    inlineelement   go to state 27


state 20

   13 line: ULSTART . inlineelements LINEBREAK
   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 50
    inlineelement   go to state 27


state 21

   28 inlineelement: DOUBLEBACKTICK . codespan DOUBLEBACKTICK
   35 codespan: . codespan code_list
   36         | . code_list
   37 code_list: . CODETEXT
   38          | . SPECIALCHAR

    SPECIALCHAR  shift, and go to state 42
    CODETEXT     shift, and go to state 43

    codespan   go to state 51
    code_list  go to state 45


state 22

    5 line: QUOTEBLANKLINE .

    $default  reduce using rule 5 (line)


state 23

   11 line: QUOTEOLSTART . inlineelements LINEBREAK
   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 52
    inlineelement   go to state 27


state 24

   15 line: QUOTEULSTART . inlineelements LINEBREAK
   19 inlineelements: . inlineelements inlineelement
   20               | . inlineelement
   21 inlineelement: . TEXT
   22              | . SPECIALCHAR
   23              | . STAR inlineelements STAR
   24              | . UNDERSCORE inlineelements UNDERSCORE
   25              | . DOUBLESTAR inlineelements DOUBLESTAR
   26              | . DOUBLEUNDERSCORE inlineelements DOUBLEUNDERSCORE
   27              | . BACKTICK codespan BACKTICK
   28              | . DOUBLEBACKTICK codespan DOUBLEBACKTICK
   29              | . LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES
   30              | . EXCLAMATION LEFTSQUARE plaintext RIGHTSQUARE LEFTPARENTHESES plaintext RIGHTPARENTHESES

    TEXT              shift, and go to state 5
    SPECIALCHAR       shift, and go to state 6
    EXCLAMATION       shift, and go to state 10
    LEFTSQUARE        shift, and go to state 11
    UNDERSCORE        shift, and go to state 12
    STAR              shift, and go to state 13
    BACKTICK          shift, and go to state 14
    DOUBLESTAR        shift, and go to state 17
    DOUBLEUNDERSCORE  shift, and go to state 18
    DOUBLEBACKTICK    shift, and go to state 21

    inlineelements  go to state 53
    inlineelement   go to state 27


state 25
